--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
+			#button-panel {
+				height: 32px;
+			}
 		</style>
 	</head>
 	<body>
+		<div id="button-panel">
+		</div>
+		<div id="root"></div>
 		<script src="js/three.js"></script>
 		<script src="js/main.js"></script>
 	</body>
