get cursor position

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 			#button-panel {
 				height: 32px;
 			}
+			#button-panel-2 {
+				height: 32px;
+			}
 		</style>
 	</head>
 	<body>
 		<div id="button-panel">
+		</div>
+		<div id="button-panel-2">
 		</div>
 		<div id="root"></div>
 		<script src="js/three.js"></script>
