--- a/index.html
+++ b/index.html
@@ -5,21 +5,40 @@
 		<title>MurCAD</title>
 		<style>
 			body { margin: 0; }
-			canvas { display: block; }
+			#canvas { 
+				display: flex;
+				width: 64px; 
+				}
 			#button-panel {
 				height: 32px;
 			}
 			#button-panel-2 {
 				height: 32px;
 			}
+			#history-button-panel {
+				height: 100%;
+				overflow: scroll;
+			}
+			
 		</style>
 	</head>
 	<body>
-		<div id="button-panel">
-		</div>
-		<div id="button-panel-2">
-		</div>
-		<div id="root"></div>
+		<div id="canvas">
+		    <div id="left-panel">
+
+				<div id="button-panel">
+				</div>
+				<div id="button-panel-2">
+				</div>
+				
+				<div id="viewport"></div>
+			 </div>
+			 <div id="right-panel">
+				<div id="history-button-panel">
+				</div>
+			 </div>
+
+	    </div>
 		<script src="js/three.js"></script>
 		<script src="js/main.js"></script>
 	</body>
