--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 	    </div>
 		<script src="js/three.js"></script>
+		<script src="js/button.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
