--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
 	    </div>
 		<script src="js/three.js"></script>
+		<script src="js/glsl.js"></script>
 		<script src="js/button.js"></script>
+		<script src="js/view.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
