--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 
 	    </div>
 		<script src="js/three.js"></script>
+		<script src="js/canvas.js"></script>
 		<script src="js/glsl.js"></script>
 		<script src="js/button.js"></script>
-		<script src="js/view.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/view.js"></script>
 	</body>
 </html>
