--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 				height: 100%;
 				overflow: scroll;
 			}
-			
 		</style>
 	</head>
 	<body>
@@ -40,10 +39,13 @@
 
 	    </div>
 		<script src="js/three.js"></script>
-		<script src="js/canvas.js"></script>
 		<script src="js/glsl.js"></script>
+		<script src="js/scene.js"></script>
+		<script src="js/mouse.js"></script>
 		<script src="js/button.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/history.js"></script>
+		<script src="js/menu.js"></script>
 		<script src="js/view.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
