--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 	    </div>
 		<script src="js/three.js"></script>
+		<script src="js/canvas.js"></script>
 		<script src="js/glsl.js"></script>
 		<script src="js/scene.js"></script>
 		<script src="js/mouse.js"></script>
