icons in operation panel

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 		<script src="js/glsl.js"></script>
 		<script src="js/canvas.js"></script>
 		<script src="js/mouse.js"></script>
+		<script src="js/icons.js"></script>
 		<script src="js/button.js"></script>
 		<script src="js/history.js"></script>
 		<script src="js/menu.js"></script>
