--- a/index.html
+++ b/index.html
@@ -18,24 +18,33 @@
 				text-align:center;
 				font-family: 'Lato', sans-serif;
 			}
-
+        
 			.shape-panel {
 				padding: 1em 0 1em 0;
-				height: 250px;
+				height: 15%;
 				background-color: rgb(0,0,0,0.5);
-				color: white;
+				color:RGB(255,255,255,0.4);
 				margin-bottom: 10px;
-				border-top-left-radius: 30px;
-				border-top-right-radius: 30px;
+				border-radius: 30px;
 			}
 			.operation-panel {
 				padding: 1em 0 1em 0;
-				height: 250px;
+				height: 15%;
 				background-color: rgb(0,0,0,0.5);
-				color: white;
+				color:RGB(255,255,255,0.4);
 				margin-bottom: 10px;
-				border-bottom-left-radius: 30px;
-				border-bottom-right-radius: 30px;
+				border-radius: 30px;
+			}
+			#history-panel {
+				padding: 1em 0 1em 0;
+				position:absolute;
+				background-color: rgb(0,0,0,0.5);
+				color:rgb(255,255,255,0.4);
+				height: 33%;
+				width: 200px;
+				border-radius: 30px;
+				text-align:center;
+				overflow: auto;
 			}
 			#button-panel {
 				position:absolute;
@@ -45,36 +54,41 @@
 				position:absolute;
 				height: 32px;
 			}
-			#history-panel {
-				right:0;
-				position:absolute;
-				background-color: rgb(0,0,0,0.5);
-				height: 575px;
-				width: 200px;
-				margin-right:10px;
-				margin: 30px;
-				border-radius: 30px;
-				text-align:center;
-				font-family: 'Lato', sans-serif;
-				overflow: scroll;
+			
+			::-webkit-scrollbar {
+			width: 20px;
 			}
+			::-webkit-scrollbar-track {
+			box-shadow: inset 0 0 5px rgb(0,0,0,0);
+			border-radius: 10px;
+			}
+			::-webkit-scrollbar-thumb {
+			background: rgb(255,255,255,0.4);
+			border-radius: 10px;
+			}
+			::-webkit-scrollbar-thumb:hover {
+			background: rgb(255,255,255,0.4);
+}
 		</style>
 		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div class="canvas">
-			<div id="history-panel"></div>
+			
 			<div class="tool-panel">
 				<div class= "shape-panel">
-					<b>SHAPE</b>
+					<b>SHAPES</b>
 					<div id="button-panel">
 					</div>
 				</div>
 				<div class= "operation-panel">
-					<b>OPERATION</b>
+					<b>OPERATIONS</b>
 					<div id="button-panel-2">
 					</div>
 				</div>
+				<div id="history-panel">
+					<b>HISTORY</b>
+					</div>
 			</div>
 		    <div id="left-panel">
 				<div id="viewport"></div>
