--- a/index.html
+++ b/index.html
@@ -47,12 +47,21 @@
 				overflow: auto;
 			}
 			#button-panel {
+				margin: 10px;
 				position:absolute;
 				height: 32px;
 			}
 			#button-panel-2 {
+				margin:10px;
 				position:absolute;
 				height: 32px;
+			}
+			#history {
+				padding-left: 57px;
+				margin: 10px;
+				position:absolute;
+				height: 32px;
+				width: 40px;
 			}
 			
 			::-webkit-scrollbar {
@@ -88,6 +97,7 @@
 				</div>
 				<div id="history-panel">
 					<b>HISTORY</b>
+					<div id="history"></div>
 					</div>
 			</div>
 		    <div id="left-panel">
