--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8">
 		<title>MurCAD</title>
 		<style>
+			div {
+			-webkit-user-select: none; 
+			-ms-user-select: none; 
+			user-select: none;
+			}
 			body { margin: 0; }
 			canvas { 
 				display: flex;
@@ -13,7 +18,7 @@
 				background-color: rgb(0,0,0,0);
 				height: 100vh;
 				width: 220px;
-				border-radius: 10px;
+				border-radius: 30px;
 				margin: 30px;
 				text-align:center;
 				font-family: 'Lato', sans-serif;
@@ -21,7 +26,7 @@
         
 			.shape-panel {
 				padding: 1em 0 1em 0;
-				height: 15%;
+				height: 75px;
 				background-color: rgb(0,0,0,0.5);
 				color:RGB(255,255,255,0.4);
 				margin-bottom: 10px;
@@ -29,7 +34,7 @@
 			}
 			.operation-panel {
 				padding: 1em 0 1em 0;
-				height: 15%;
+				height: 75px;
 				background-color: rgb(0,0,0,0.5);
 				color:RGB(255,255,255,0.4);
 				margin-bottom: 10px;
@@ -40,7 +45,7 @@
 				position:absolute;
 				background-color: rgb(0,0,0,0.5);
 				color:rgb(255,255,255,0.4);
-				height: 33%;
+				height: 220px;
 				width: 220px;
 				border-radius: 30px;
 				text-align:center;
@@ -69,11 +74,11 @@
 			}
 			::-webkit-scrollbar-track {
 			box-shadow: inset 0 0 5px rgb(0,0,0,0);
-			border-radius: 10px;
+			border-radius: 30px;
 			}
 			::-webkit-scrollbar-thumb {
 			background: rgb(255,255,255,0.4);
-			border-radius: 10px;
+			border-radius: 30px;
 			}
 			::-webkit-scrollbar-thumb:hover {
 			background: rgb(255,255,255,0.4);
