refactoring history panel

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 			}
 			#history {
 				padding-left: 57px;
+				color:rgb(255,255,255,0.9);
 				margin: 10px;
 				position:absolute;
 				height: 80px;
