--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>MurCAD</title>
 		<style>
 			div {
-			-webkit-user-select: none; 
-			-ms-user-select: none; 
-			user-select: none;
+			    -webkit-user-select: none; 
+			    -ms-user-select: none; 
+			    user-select: none;
 			}
 			body { margin: 0; }
 			canvas { 
@@ -62,7 +62,7 @@
 				height: 32px;
 			}
 			#history {
-				padding-left: 57px;
+				padding-left: 25px;
 				color:rgb(255,255,255,0.9);
 				margin: 10px;
 				position:absolute;
@@ -71,26 +71,24 @@
 			}
 			
 			::-webkit-scrollbar {
-			width: 20px;
+				width: 20px;
 			}
 			::-webkit-scrollbar-track {
-			box-shadow: inset 0 0 5px rgb(0,0,0,0);
-			border-radius: 30px;
+				box-shadow: inset 0 0 5px rgb(0,0,0,0);
+				border-radius: 30px;
 			}
 			::-webkit-scrollbar-thumb {
-			background: rgb(255,255,255,0.4);
-			border-radius: 30px;
+				background: rgb(255,255,255,0.4);
+			    border-radius: 30px;
 			}
 			::-webkit-scrollbar-thumb:hover {
-			background: rgb(255,255,255,0.4);
+			    background: rgb(255,255,255,0.4);
 }
 		</style>
 		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		
 		<div class="canvas">
-			
 			<div class="tool-panel">
 				<div class= "shape-panel">
 					<b>SHAPES</b>
@@ -116,6 +114,7 @@
 
 	    </div>
 		<script src="js/three.js"></script>
+		<script src="js/mousepointer.js"></script>
 		<script src="js/sceneSize.js"></script>
 		<script src="js/glsl.js"></script>
 		<script src="js/canvas.js"></script>
