--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>MurCAD</title>
 		<style>
 			div {
+				cursor: none;
 			    -webkit-user-select: none; 
 			    -ms-user-select: none; 
 			    user-select: none;
